<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/login_background"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              tools:context="com.j4f.activities.SigninActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"/>

    <!--<ScrollView-->
    <!--android:id="@+id/login_form"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:layout_gravity="center_horizontal">-->


    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_weight="1"
        android:orientation="vertical">

        <include layout="@layout/logo"/>

        <!--<ImageView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:padding="16dp"-->
            <!--android:src="@mipmap/stuber"/>-->

        <uet.vav.stuber.customizes.MyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/welcome_text"
            android:textColor="@color/lightgray"
            android:textSize="@dimen/welcome_text_size"/>

        <LinearLayout
            android:orientation="vertical"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="-1dp"
                android:background="@drawable/top_rounded_border"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:paddingLeft="30dp"
                android:singleLine="true"
                android:textColor="@color/gray"
                android:textColorHint="#B6B6B6"/>

            <uet.vav.stuber.customizes.MyEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="-1dp"
                android:background="@drawable/bottom_rounded_border"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/login"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingLeft="30dp"
                android:singleLine="true"
                android:textColor="@color/gray"
                android:textColorHint="@color/lightgray"/>
        </LinearLayout>

        <Button
            android:id="@+id/confirm_sign_in_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorPrimary"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/confirm_sign_in_fb_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/colorFB"
            android:text="@string/login_fb"
            android:textColor="#ffffff"
            android:textStyle="bold"/>

        <uet.vav.stuber.customizes.MyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:padding="@dimen/expand_size"
            android:text="@string/forgot_password"/>

    </LinearLayout>

    <uet.vav.stuber.customizes.MyTextView
        android:id="@+id/link_to_singup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_gravity="bottom"
        android:padding="@dimen/expand_size"
        android:layout_weight="0"
        android:text="@string/signup_link"/>
    <!--</ScrollView>-->
</LinearLayout>

