<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.j4f.activities.SigninActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">


        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <uet.vav.stuber.customizes.MyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                android:padding="8dp"
                android:text="Welcome to student tutoring network StutNet"
                android:textColor="@color/lightgray"
                android:textSize="18dp" />

            <LinearLayout
                android:orientation="vertical"
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <AutoCompleteTextView
                    android:id="@+id/full_name"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="-1dp"
                    android:background="@drawable/top_rounded_border"
                    android:hint="@string/prompt_fullname"
                    android:inputType="textAutoComplete"
                    android:paddingLeft="30dp"
                    android:singleLine="true"
                    android:textColor="@color/gray"
                    android:textColorHint="@color/lightgray" />

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="-1dp"
                    android:background="@drawable/no_rounded_border"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="30dp"
                    android:singleLine="true"
                    android:textColor="@color/gray"
                    android:textColorHint="@color/lightgray" />


                <uet.vav.stuber.customizes.MyEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="30dp"
                    android:layout_marginTop="-1dp"
                    android:background="@drawable/bottom_rounded_border"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/login"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingLeft="30dp"
                    android:singleLine="true"
                    android:textColor="@color/gray"
                    android:textColorHint="@color/lightgray" />
            </LinearLayout>

            <Button
                android:layout_margin="8dp"
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimary"
                android:text="@string/register"
                android:textColor="#ffffff"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
